revise built files

--- a/less/bootstrap-system-builder.less
+++ b/less/bootstrap-system-builder.less
@@ -14,7 +14,7 @@
 @import "glyphicons.less";
 
 // Core CSS
-@import "scaffolding.less";
+// @import "scaffolding.less";
 @import "type.less";
 @import "code.less";
 // @import "grid.less";
