--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -773,6 +773,7 @@ $alert-danger-border-color:   $state-danger-border-color !default;
 
 // Progress bars
 
+$progress-margin-bottom:        .75rem !default;
 $progress-height:               1rem !default;
 $progress-font-size:            .75rem !default;
 $progress-bg:                   $gray-lighter !default;
