a small fix for grid not correct

--- a/less/bootstrap-grid.less
+++ b/less/bootstrap-grid.less
@@ -52,5 +52,5 @@
 // @import "carousel.less";
 
 // Utility classes
-// @import "utilities.less";
+@import "utilities.less";
 @import "responsive-utilities.less";
