[DR-8194-distance-in-result-list] introduces new card class for distance information

--- a/scss/custom/_card.scss
+++ b/scss/custom/_card.scss
@@ -198,6 +198,10 @@ a.card-block {
     font-size: $publication-meta-font-size;
   }
 
+  .meta-distance {
+    font-size: $publication-meta-font-size;
+  }
+
   .publication-body {
     margin-top: $spacer-y * .5;
 
