extends icons, adds doc

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -376,6 +376,9 @@ $icon-caret-left: "\e921";
 $icon-search: "\e922";
 $icon-close: "\e923";
 $icon-remove: "\e924";
+$icon-heart: "\e925";
+$icon-heart-outline: "\e926";
+$icon-location: "\e927";
 
 
 // Components
