--- a/scss/custom/utilities/_icons.scss
+++ b/scss/custom/utilities/_icons.scss
@@ -75,6 +75,9 @@
 .icon-search:before { content: $icon-search; }
 .icon-close:before { content: $icon-close; }
 .icon-remove:before { content: $icon-remove; }
+.icon-heart:before { content: $icon-heart; }
+.icon-heart-outline:before { content: $icon-heart-outline; }
+.icon-location:before { content: $icon-location; }
 
 
 // Modifiers
