--- a/scss/_button-group.scss
+++ b/scss/_button-group.scss
@@ -148,9 +148,10 @@
     margin-left: 0;
   }
 
-> .btn {
-  &:not(:first-child):not(:last-child) {
-    border-radius: 0;
+  > .btn {
+    &:not(:first-child):not(:last-child) {
+      border-radius: 0;
+    }
   }
 
   &:first-child:not(:last-child) {
