Add $font-weight-light var

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -240,6 +240,7 @@ $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
 $font-size-xs:   .75rem !default;
 
+$font-weight-light: light !default;
 $font-weight-normal: normal !default;
 $font-weight-bold: bold !default;
 
