--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -31,6 +31,7 @@
 // Cards
 // Tooltips
 // Popovers
+// Toasts
 // Badges
 // Modals
 // Alerts
@@ -668,6 +669,22 @@ $popover-arrow-color:                 $popover-bg !default;
 
 $popover-arrow-outer-width:           ($popover-arrow-width + 1px) !default;
 $popover-arrow-outer-color:           fade-in($popover-border-color, .05) !default;
+
+
+// Toasts
+$toast-max-width: 350px !default;
+$toast-padding-x: .75rem !default;
+$toast-padding-y: .25rem !default;
+$toast-font-size: .875rem !default;
+$toast-background-color: rgba($white, .85) !default;
+$toast-border-width: 1px !default;
+$toast-border-color: rgba(0,0,0,.1) !default;
+$toast-border-radius: .25rem !default;
+$toast-box-shadow: 0 .25rem .75rem rgba($black, .1) !default;
+
+$toast-header-color: $gray-600;
+$toast-header-background-color: rgba($white, .85) !default;
+$toast-header-border-color: rgba(0,0,0,.05) !default;
 
 
 // Badges
