update local var name to english

--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -57,10 +57,10 @@
   $g: green($color);
   $b: blue($color);
   // get the relative lum for each color
-  $luminositecouleur: relativelum($r / 255, $g / 255, $b / 255);
-  $luminositeblanc: relativelum(1, 1, 1);
+  $luminositycolor: relativelum($r / 255, $g / 255, $b / 255);
+  $luminositywhite: relativelum(1, 1, 1);
   // if luminosite doesn't fit with white color return black
-  @if ((($luminositeblanc + .05) / ($luminositecouleur + .05)) < 4.5) {
+  @if ((($luminositywhite + .05) / ($luminositycolor + .05)) < 4.5) {
     color: #000;
   } @else {
     color: #fff;
