Fixed broken jumbotron-image-adjacent-to-navbar style (#110)

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -857,7 +857,7 @@
 
 .navbar + .jumbotron,
 .navbar + .jumbotron-image > .jumbotron,
-.jumbotron-image-adjacent-to-navbar {
+.jumbotron-image-adjacent-to-navbar > .jumbotron {
     padding-bottom: 64px;
 
     @media (min-width: @screen-md-min) {
