--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -72,6 +72,12 @@
   &:first-child {
     @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
   }
+
+  ~ .list-group {
+	  .list-group-item:first-child {
+		  border-top: 0;
+	  }
+  }
 }
 
 .card-footer {
