--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -73,7 +73,7 @@
     @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
   }
 
-  ~ .list-group {
+  + .list-group {
     .list-group-item:first-child {
       border-top: 0;
     }
