--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -154,7 +154,7 @@
 // will display normally.
 
 .table-responsive {
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(sm) {
     display: block;
     width: 100%;
     overflow-x: auto;
