--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -12,15 +12,20 @@
   @media print {
     *,
     *::before,
-    *::after,
-    p::first-letter,
-    div::first-letter,
-    blockquote::first-letter,
-    li::first-letter,
-    p::first-line,
-    div::first-line,
-    blockquote::first-line,
-    li::first-line {
+    *::after {
+      // Bootstrap specific; comment the following selectors out
+      // as we don't set any shadow on first line/letter in Bootstrap
+      // and these selectors trigger a nasty rendering bug in current Chrome
+      // https://bugs.chromium.org/p/chromium/issues/detail?id=739800
+      // p::first-letter,
+      // div::first-letter,
+      // blockquote::first-letter,
+      // li::first-letter,
+      // p::first-line,
+      // div::first-line,
+      // blockquote::first-line,
+      // li::first-line
+
       // Bootstrap specific; comment out `color` and `background`
       //color: #000 !important; // Black prints faster:
                                 //   http://www.sanbeiji.com/archives/953
