--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -164,6 +164,11 @@
     }
   }
 
+  &[multiple] {
+    height: auto;
+    background: none;
+  }
+
   &:disabled {
     color: $custom-select-disabled-color;
     background-color: $custom-select-disabled-bg;
