--- a/less/bootstrap-ilis.less
+++ b/less/bootstrap-ilis.less
@@ -5,8 +5,10 @@
  */
 
 // Core variables and mixins
-@import "variables.less";
+@import "ilis/ilis-variables.less";
 @import "mixins.less";
+
+@import "ilis/ilis-mixins-buttons.less";
 
 // Reset and dependencies
 // @import "normalize.less";
@@ -15,12 +17,12 @@
 
 // Core CSS
 @import "scaffolding.less";
-// @import "type.less";
-// @import "code.less";
+@import "ilis/ilis-type.less";
+@import "code.less";
 // @import "grid.less";
 // @import "tables.less";
 // @import "forms.less";
-// @import "buttons.less";
+@import "ilis/ilis-buttons.less";
 
 // Components
 // @import "component-animations.less";
