--- a/less/ilis/ilis-override.less
+++ b/less/ilis/ilis-override.less
@@ -195,59 +195,31 @@ a:link {
     background: linear-gradient(to bottom, #EFECE6 0, #F8F7F5 51%, #fff 100%);
 }
 
-.btn {
-    border: 0px solid transparent;
-    padding: 3px 20px;
-    font-size: 12px;
-    font-weight: bold;
-}
+// .btn-success:hover {
+//     color: #777;
+//     background-color: #e6e6e6;
+//     background-image: none;
+//     border-color: #adadad;
+// }
 
-.btn-default {
-    color: #FFF;
-    background-color: #111;
-    background-image: none;
-    text-shadow: none;
-}
+// .btn-info:hover {
+//     color:#000;
+//     background-color: #e6e6e6;
+//     background-image: none;
+//     border-color: #adadad;
+// }
 
-.btn-success {
-    color: #333;
-    background-color: #e6e6e6;
-    background-image: none;
-    border-color: #adadad;
-}
+// .btn-info:focus {
+//     background-color: #e6e6e6 !important;
+//     background-image: none !important;
+//     border-color: #adadad !important;
+// }
 
-.btn-success:hover {
-    color: #777;
-    background-color: #e6e6e6;
-    background-image: none;
-    border-color: #adadad;
-}
-
-.btn-info {
-    color: #FFF;
-    background-color: #111;
-    background-image: none;
-    text-shadow: none;
-}
-
-.btn-info:hover {
-    color:#000;
-    background-color: #e6e6e6;
-    background-image: none;
-    border-color: #adadad;
-}
-
-.btn-info:focus {
-    background-color: #e6e6e6 !important;
-    background-image: none !important;
-    border-color: #adadad !important;
-}
-
-.btn-info.disabled, .btn-info[disabled], fieldset[disabled] .btn-info, .btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover, .btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus, .btn-info.disabled.focus, .btn-info[disabled].focus, fieldset[disabled] .btn-info.focus, .btn-info.disabled:active, .btn-info[disabled]:active, fieldset[disabled] .btn-info:active, .btn-info.disabled.active, .btn-info[disabled].active, fieldset[disabled] .btn-info.active {
-    color: #FFF;
-    background-color: #777;
-    background-image: none;
-}
+// .btn-info.disabled, .btn-info[disabled], fieldset[disabled] .btn-info, .btn-info.disabled:hover, .btn-info[disabled]:hover, fieldset[disabled] .btn-info:hover, .btn-info.disabled:focus, .btn-info[disabled]:focus, fieldset[disabled] .btn-info:focus, .btn-info.disabled.focus, .btn-info[disabled].focus, fieldset[disabled] .btn-info.focus, .btn-info.disabled:active, .btn-info[disabled]:active, fieldset[disabled] .btn-info:active, .btn-info.disabled.active, .btn-info[disabled].active, fieldset[disabled] .btn-info.active {
+//     color: #FFF;
+//     background-color: #777;
+//     background-image: none;
+// }
 
 /* Workaround for changing the "Add" button style to match those of "btn-default" */
 div.schema-form-array button.btn-success {
