--- a/less/bootstrap-ilis.less
+++ b/less/bootstrap-ilis.less
@@ -16,12 +16,11 @@
 // @import "glyphicons.less";
 
 // Core CSS
-@import "scaffolding.less";
-@import "ilis/ilis-type.less";
+@import "type.less";
 @import "code.less";
 // @import "grid.less";
 // @import "tables.less";
-// @import "forms.less";
+@import "ilis/ilis-forms.less";
 @import "ilis/ilis-buttons.less";
 
 // Components
@@ -41,11 +40,11 @@
 // @import "alerts.less";
 // @import "progress-bars.less";
 // @import "media.less";
-// @import "list-group.less";
+@import "list-group.less";
 // @import "panels.less";
 // @import "responsive-embed.less";
 // @import "wells.less";
-// @import "close.less";
+@import "close.less";
 
 // Components w/ JavaScript
 // @import "modals.less";
@@ -57,4 +56,4 @@
 @import "utilities.less";
 // @import "responsive-utilities.less";
 
-@import "ilis/ilis-override.less";
+@import "ilis/ilis-extra.less";
