--- a/less/bootstrap-system-builder.less
+++ b/less/bootstrap-system-builder.less
@@ -5,7 +5,7 @@
  */
 
 // Core variables and mixins
-@import "variables.less";
+@import "system-builder/system-builder-variables.less";
 @import "mixins.less";
 
 // Reset and dependencies
@@ -54,3 +54,5 @@
 // Utility classes
 @import "utilities.less";
 // @import "responsive-utilities.less";
+
+@import "system-builder/system-builder-extra.less";
