--- a/less/ilis/ilis-mixins-buttons.less
+++ b/less/ilis/ilis-mixins-buttons.less
@@ -6,32 +6,32 @@
 .button-variant(@color; @background; @border) {
   color: @color;
   background-color: @background;
-  border-color: @border;
+  border-color: @background; // @border;
 
   &:focus,
   &.focus {
     color: @background; // @color;
     background-color: @color; // darken(@background, 10%);
-        border-color: darken(@border, 25%);
+    // border-color: darken(@border, 25%);
   }
   &:hover {
     color: @background; // @color;
     background-color: @color; // darken(@background, 10%);
-        border-color: darken(@border, 12%);
+    // border-color: darken(@border, 12%);
   }
   &:active,
   &.active,
   .open > .dropdown-toggle& {
     color: @background; // @color;
     background-color: @color; // darken(@background, 10%);
-        border-color: darken(@border, 12%);
+    // border-color: darken(@border, 12%);
 
     &:hover,
     &:focus,
     &.focus {
       color: @background; // @color;
       background-color: @color; // darken(@background, 17%);
-          border-color: darken(@border, 25%);
+      // border-color: darken(@border, 25%);
     }
   }
   &:active,
@@ -47,7 +47,7 @@
     &.focus {
       color: #fff;
       background-color: @gray-light; // @background;
-      border-color: @border;
+      border-color: @gray-light;  // @border;
     }
   }
 
