--- a/less/ilis/ilis-variables.less
+++ b/less/ilis/ilis-variables.less
@@ -9,6 +9,9 @@
 @padding-base-vertical:     3px; // 6px;
 @padding-base-horizontal:   20px; // 12px;
 
+@form-control-padding-base-vertical: @padding-base-vertical;
+@form-control-padding-base-horizontal: 6px;
+
 @border-radius-base:        0px; // 4px;
 @border-radius-large:       0px; // 6px;
 @border-radius-small:       0px; // 3px;
