--- a/less/ilis/ilis-app.less
+++ b/less/ilis/ilis-app.less
@@ -285,7 +285,7 @@ legend {
 }
 
 fieldset {
-    padding: .35em .625em .75em;
+    // padding: .35em .625em .75em;
     /*margin: 0;*/
     /*border: 0;*/
     /*min-width: 0;*/
