--- a/scss/_input-group.scss
+++ b/scss/_input-group.scss
@@ -71,7 +71,7 @@
   font-size: $font-size-base; // Match inputs
   font-weight: $font-weight-normal;
   line-height: $input-btn-line-height;
-  color: $input-color;
+  color: $input-group-addon-color;
   text-align: center;
   background-color: $input-group-addon-bg;
   border: $input-btn-border-width solid $input-group-addon-border-color;
