--- a/less/ilis/ilis-variables.less
+++ b/less/ilis/ilis-variables.less
@@ -1,4 +1,5 @@
 @import "variables.less";
+
 @brand-success:         #e6e6e6; // #5cb85c;
 @brand-info:            #111; // #5bc0de;
 
@@ -29,3 +30,5 @@
 @btn-info-color:                 @btn-default-color; // #fff;
 @btn-info-bg:                    @btn-default-bg; // @brand-info;
 @btn-info-border:                @btn-default-border; // darken(@btn-info-bg, 5%);
+
+@ilis-color-link: #337ab7;
