--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -12,6 +12,11 @@
   background-clip: border-box;
   border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
+  // To display hr inside card.
+  hr {
+    margin-right: 0;
+    margin-left: 0;
+  }
 }
 
 .card-body {
