Add position utilities class

--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -23,3 +23,8 @@
     z-index: $zindex-sticky;
   }
 }
+
+.pos-s { position: static; }
+.pos-r { position: relative; }
+.pos-a { position: absolute; }
+.pos-f { position: fixed; }
