fix #23034: add variable for navbar padding

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -528,6 +528,7 @@ $zindex-tooltip:            1070 !default;
 
 // Navs
 
+$nav-link-padding:              .5rem !default;
 $nav-link-padding-y:            .5rem !default;
 $nav-link-padding-x:            1rem !default;
 $nav-link-disabled-color:       $gray-600 !default;
