--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -166,8 +166,8 @@
           }
 
           .nav-link {
-            padding-right: .5rem;
-            padding-left: .5rem;
+            padding-right: $nav-link-padding;
+            padding-left: $nav-link-padding;
           }
         }
 
