--- a/scss/_list-group.scss
+++ b/scss/_list-group.scss
@@ -85,8 +85,8 @@
 
 .list-group-flush {
   .list-group-item {
-    border-top: 0;
     border-right: 0;
+    border-bottom: 0;
     border-left: 0;
     border-radius: 0;
   }
