--- a/scss/_list-group.scss
+++ b/scss/_list-group.scss
@@ -89,6 +89,9 @@
     border-bottom: 0;
     border-left: 0;
     border-radius: 0;
+    &:first-child {
+      border-top: 0;
+    }
   }
 
   &:first-child {
