made changes as per suggestion

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -166,8 +166,8 @@
           }
 
           .nav-link {
-            padding-right: $nav-link-padding;
-            padding-left: $nav-link-padding;
+            padding-right: $navbar-link-padding-right;
+            padding-left: $navbar-link-padding-left;
           }
         }
 
