change navbar link padding variable to x

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -166,8 +166,8 @@
           }
 
           .nav-link {
-            padding-right: $navbar-link-padding-right;
-            padding-left: $navbar-link-padding-left;
+            padding-right: $navbar-link-padding-x;
+            padding-left: $navbar-link-padding-x;
           }
         }
 
