--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -548,8 +548,7 @@ $nav-pills-link-active-bg:    $component-active-bg !default;
 
 $navbar-padding-y:                  ($spacer / 2) !default;
 $navbar-padding-x:                  $spacer !default;
-$navbar-link-padding-left:              .5rem !default;
-$navbar-link-padding-right:              .5rem !default;
+$navbar-link-padding-x:              .5rem !default;
 $navbar-brand-font-size:            $font-size-lg !default;
 // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
 $nav-link-height:                   $navbar-brand-font-size * $line-height-base !default;
