--- a/scss/_reboot.scss
+++ b/scss/_reboot.scss
@@ -52,7 +52,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 body {
   margin: 0; // 1
   font-family: $font-family-base;
-  font-size: $font-size-base;
+  @include rfs($font-size-base);
   font-weight: $font-weight-base;
   line-height: $line-height-base;
   color: $body-color;
@@ -161,7 +161,7 @@ strong {
 }
 
 small {
-  font-size: 80%; // Add the correct font size in all browsers
+  @include rfs(80%); // Add the correct font size in all browsers
 }
 
 //
@@ -172,7 +172,7 @@ small {
 sub,
 sup {
   position: relative;
-  font-size: 75%;
+  @include rfs(75%);
   line-height: 0;
   vertical-align: baseline;
 }
@@ -227,7 +227,7 @@ code,
 kbd,
 samp {
   font-family: monospace, monospace; // Correct the inheritance and scaling of font size in all browsers.
-  font-size: 1em; // Correct the odd `em` font sizing in all browsers.
+  @include rfs(1em); // Correct the odd `em` font sizing in all browsers.
 }
 
 pre {
@@ -335,7 +335,7 @@ optgroup,
 textarea {
   margin: 0; // Remove the margin in Firefox and Safari
   font-family: inherit;
-  font-size: inherit;
+  @include rfs(inherit);
   line-height: inherit;
 }
 
@@ -414,7 +414,7 @@ legend {
   max-width: 100%; // 1
   padding: 0;
   margin-bottom: .5rem;
-  font-size: 1.5rem;
+  @include rfs(1.5rem);
   line-height: inherit;
   color: inherit; // 2
   white-space: normal; // 1
