--- a/scss/_input-group.scss
+++ b/scss/_input-group.scss
@@ -68,7 +68,7 @@
 .input-group-addon {
   padding: $input-btn-padding-y $input-btn-padding-x;
   margin-bottom: 0; // Allow use of <label> elements by overriding our default margin-bottom
-  font-size: $font-size-base; // Match inputs
+  @include rfs($font-size-base); // Match inputs
   font-weight: $font-weight-normal;
   line-height: $input-btn-line-height;
   color: $input-color;
@@ -80,13 +80,13 @@
   // Sizing
   &.form-control-sm {
     padding: $input-btn-padding-y-sm $input-btn-padding-x-sm;
-    font-size: $font-size-sm;
+    @include rfs($font-size-sm);
     @include border-radius($input-border-radius-sm);
   }
 
   &.form-control-lg {
     padding: $input-btn-padding-y-lg $input-btn-padding-x-lg;
-    font-size: $font-size-lg;
+    @include rfs($font-size-lg);
     @include border-radius($input-border-radius-lg);
   }
 
@@ -137,7 +137,7 @@
   position: relative;
   // Jankily prevent input button groups from wrapping with `white-space` and
   // `font-size` in combination with `inline-block` on buttons.
-  font-size: 0;
+  @include rfs(0);
   white-space: nowrap;
 
   // Negative margin for spacing, position for bringing hovered/focused/actived
