--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -10,6 +10,7 @@
 @import "mixins/resize";
 @import "mixins/screen-reader";
 @import "mixins/size";
+@import "mixins/rfs";
 @import "mixins/reset-text";
 @import "mixins/text-emphasis";
 @import "mixins/text-hide";
