--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -6,7 +6,7 @@
 .progress {
   display: flex;
   overflow: hidden; // force rounded corners by cropping it
-  font-size: $progress-font-size;
+  @include rfs($progress-font-size);
   line-height: $progress-height;
   text-align: center;
   background-color: $progress-bg;
